--- a/site/about.html
+++ b/site/about.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>About</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+  margin: 0;
+  font-family: "Lato", sans-serif;
+}
 
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f0c905;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
+  display: block;
+  color: blue;
+  padding: 16px;
+  text-decoration: none;
+}
+ 
+.sidebar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.sidebar a:hover:not(.active) {
+  background-color: red;
+  color: white;
+}
+
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+  text-align: center;
+  color: green;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="sidebar">
+  <a href="index.html">Home</a>
+  <a class="active" href="about.html">About</a>
+  <a href="faq.html">FAQ</a>
+  <a href="pricing.html">Pricing</a>
+  <a href="how-to-set-up.html">Set Up</a>
+</div>
+
+<div class="content">
+<h1>About</h1>
+<p>Software and Website Developer Team Hosting provide two types of hosting, Github Pages hosting and Vercel hosting. This repository is specially made and used for Vercel hosting. You could host a website for <strong>FREE</strong> on Software and Website Developer Team Hosting using Vercel. </p>
+<hr>
+<h2>Vercel</h2>
+<p>Vercel is a platform for frontend frameworks and static sites, built to integrate with your headless content, commerce, or database.</p>
+</div>
+
+</body>
+</html>
